feat: add new scripts
Also update bash_aliases and i3 config

--- a/.config/i3/config
+++ b/.config/i3/config
@@ -210,6 +210,8 @@ bar {
         }
 }
 
+workspace_auto_back_and_forth yes
+
 # Lock screen
 bindsym $mod+shift+x exec ~/.config/scripts/lockscreen.sh
 
